@@ -56,4 +56,8 @@ void wait_for_children1 (void);
 
 int
 is_scanner_only_pref (const char *);
+
+void
+auth_printf (struct arglist *, char *, ...) __attribute__ ((format (printf, 2, 3)));
+
 #endif
